--- a/02Shape/index.html
+++ b/02Shape/index.html
@@ -10,12 +10,44 @@
   <body>
     <a-scene background="color: #333333">
       <a-box id="myBox"
-        width="3"
-        height="2"
+        width="1"
+        height="1"
         depth="1"
-        color="#BBAA33" 
+        color="#23f72a" 
+        position="0 2 -4"
         shadow>
       </a-box>
+      <a-sphere id="myCircle"
+        width="4"
+        height="4"
+        depth="4"
+        color="#1934ff" 
+        position="0 1 -4"
+        shadow>
+      </a-sphere>
+      <a-torus-knot id="myTorusKnot"
+        arc="180"
+        p="2"
+        q="7"
+        radius="5"
+        radius-tubular="0.1"
+        color="#26fffb" 
+        position="2 2 -4"
+        shadow>
+      </a-torus-knot> 
+      <a-cone
+      color="#fa5fe6"
+      radius-bottom="3"
+      radius-top="0"
+      position="0 0 -4"
+      shadow>
+      </a-cone>
+      <a-plane 
+      color="#000000" 
+      height="20" 
+      width="20"
+      rotation="-90 90 90">        
+      </a-plane>
     </a-scene>
   </body>
 </html>
