--- a/03Textures/index.html
+++ b/03Textures/index.html
@@ -10,7 +10,8 @@
   <body>
     <a-scene background="color: #333333">
       <a-assets>
-          <img id="wood" src="images/wood.jpg" />
+          <img id="wood" src="images/wood.jpg"/>
+          <img id="grass" src="images/grass.jpg"/>
           
       </a-assets>
       <a-box id="myBox" 
@@ -28,6 +29,7 @@
         width="100" 
         height="100" 
         color="#7BC8A4" 
+        material="src: #grass"
         shadow>
       </a-plane> 
     </a-scene>
