--- a/04Animation/index.html
+++ b/04Animation/index.html
@@ -37,6 +37,18 @@
         material="src: #wood2"
         shadow>  
       </a-box>
+      </a-sphere id="mySphere"
+         position="2 1 -5"
+         radius="3"
+         material="src: #wood"
+         shaddow
+         animation="property: rotation; 
+                   to: 90 360 180; 
+                   dur: 9000; 
+                   easing: linear; 
+                   loop: true">
+       </a-sphere>
+
       <a-plane id="ground"
         position="0 0 -4" 
         rotation="-90 0 0" 
