--- a/04Animation/index.html
+++ b/04Animation/index.html
@@ -37,7 +37,7 @@
         material="src: #wood2"
         shadow>  
       </a-box>
-      </a-sphere id="mySphere"
+      <a-sphere id="mySphere"
          position="2 1 -5"
          radius="3"
          material="src: #wood"
@@ -48,7 +48,6 @@
                    easing: linear; 
                    loop: true">
        </a-sphere>
-
       <a-plane id="ground"
         position="0 0 -4" 
         rotation="-90 0 0" 
