--- a/04Animation/index.html
+++ b/04Animation/index.html
@@ -13,6 +13,8 @@
           <img id="wood" src="images/wood.jpg" />
           <img id="wood2" src="images/wood2.jpg" />
           <img id="grass" src="images/grass.jpg" />
+          <img id="stone" src="images/stone.jpg" />
+          <img id="moon" src="images/moon.jpg" />
       </a-assets>
       <a-box id="myBox" 
         position="-1 1 -3" 
@@ -51,7 +53,7 @@
        <a-sphere id="mySecondSphere"
          position="-3 3 -3"
          radius="1"
-         material="src: #wood"
+         material="src: #moon"
          shaddow
          animation="property: rotation; 
                    to: 0 360 0; 
