--- a/04Animation/index.html
+++ b/04Animation/index.html
@@ -30,14 +30,17 @@
                    easing: linear; 
                    loop: true" >
       </a-box>
-      <a-box id="myOtherBox" 
+      <a-torus-knot id="myTorusKnot" 
         position="2 1 -3" 
         rotation="0 45 0" 
-        width="3" 
-        height="1" 
-        depth="1" 
+        arc="90"
+        p="2"
+        q="7"
+        radius="2"
+        radius-tubular="0.1"
         material="src: #wood2"
-        shadow>  
+        shadow>
+        </a-torus-knot>  
       </a-box>
       <a-sphere id="mySphere"
          position="2 6 -5"
