--- a/04Animation/index.html
+++ b/04Animation/index.html
@@ -8,14 +8,16 @@
     <script src="scripts/main.js" defer></script>
   </head>
   <body>
-    <a-scene background="color: #7df0ff">
+    <a-scene>
       <a-assets>
           <img id="wood" src="images/wood.jpg" />
           <img id="wood2" src="images/wood2.jpg" />
           <img id="grass" src="images/grass.jpg" />
           <img id="stone" src="images/stone.jpg" />
           <img id="moon" src="images/moon.jpg" />
+          <img id="moon" src="images/sky.jpg" />
       </a-assets>
+      <a-sky src="#sky"></a-sky>
       <a-box id="myBox" 
         position="-1 1 -3" 
         rotation="0 45 0" 
@@ -73,6 +75,7 @@
         material="src: #stone; repeat: 10 10"
         shadow>
       </a-plane> 
+    </a-scene>
     </a-scene>
   </body>
 </html>
