--- a/04Animation/index.html
+++ b/04Animation/index.html
@@ -15,7 +15,7 @@
           <img id="grass" src="images/grass.jpg" />
           <img id="stone" src="images/stone.jpg" />
           <img id="moon" src="images/moon.jpg" />
-          <img id="sky" src="images/sky.jpg" />
+          <img id="sky" src="images/sky.png" />
       </a-assets>
       <a-sky src="#sky"></a-sky>
       <a-box id="myBox" 
