--- a/04Animation/index.html
+++ b/04Animation/index.html
@@ -12,7 +12,7 @@
       <a-assets>
           <img id="wood" src="images/wood.jpg" />
           <img id="wood2" src="images/wood2.jpg" />
-          <img id="grass" src="images/grass.jpg" />
+          <img id="cracked" src="images/cracked.jpg" />
           <img id="stone" src="images/stone.jpg" />
           <img id="moon" src="images/moon.jpg" />
           <img id="sky" src="images/sky.png" />
@@ -72,7 +72,7 @@
         width="100" 
         height="100" 
         color="#7BC8A4" 
-        material="src: #stone; repeat: 10 10"
+        material="src: #cracked; repeat: 10 10"
         shadow>
       </a-plane> 
     </a-scene>
