--- a/04Animation/index.html
+++ b/04Animation/index.html
@@ -26,8 +26,8 @@
         depth="1" 
         material="src: #wood"
         shadow 
-        animation="property: rotation; 
-                   to: 90 360 180; 
+        animation="property: position; 
+                   to: -1 2 -10; 
                    dur: 9000; 
                    easing: linear; 
                    loop: true" >
