--- a/05Interaction/index.html
+++ b/05Interaction/index.html
@@ -35,7 +35,7 @@
           property: components.material.material.color; 
           type: color; 
           to: red; 
-          startEvents: mouseleave; 
+          startEvents: mouseenter; 
           dur: 500;">  
       </a-box>
       <a-box id="myOtherBox" 
@@ -54,7 +54,19 @@
         height="100" 
         color="#7BC8A4" 
         material="src: #grass; repeat: 10 10"
-        shadow>
+        shadow
+        animation__mouseenter="
+          property: components.material.material.color; 
+          type: color; 
+          to: yellow; 
+          startEvents: mouseenter; 
+          dur: 500;"
+        animation__mouseleave="
+          property: components.material.material.color; 
+          type: color; 
+          to: orange; 
+          startEvents: mouseleave; 
+          dur: 500;">
       </a-plane> 
     </a-scene>
   </body>
