--- a/05Interaction/index.html
+++ b/05Interaction/index.html
@@ -35,7 +35,7 @@
           property: components.material.material.color; 
           type: color; 
           to: red; 
-          startEvents: mouseenter; 
+          startEvents: mouseleave; 
           dur: 500;">  
       </a-box>
       <a-box id="myOtherBox" 
