--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -13,6 +13,7 @@
           <img id="wood" src="images/wood.jpg" />
           <img id="wood2" src="images/wood2.jpg" />
           <img id="grass" src="images/grass.jpg" />
+          <img id="compass" src="images/compass.png" />
       </a-assets>
 
       <a-camera>
@@ -23,7 +24,8 @@
           position="0 0 -1"
           radius-inner= "0.02"
           radius-outer= "0.03"
-          material="color: red; shader: flat">
+          material="color: red; shader: flat"
+          a-image src="#compass" position="0 0 -.99"></a-image>>
         </a-ring>
       </a-camera>
       
