--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -24,7 +24,7 @@
           position="0 0 -1"
           radius-inner= "0.02"
           radius-outer= "0.2"
-          material="color: red; shader: flat"
+          color="255 255 255 0"
           a-image src="#compass" position="0 0 -.99"></a-image>>
         </a-ring>
       </a-camera>
